# mnist-handwritten-digit-recognizer

./: .gitignore  LICENSE  Readme.md  requirements.txt  setup.cfg  setup.py
models/: ann_models.py  cnn_models.py  keras_sequential_model.py
output/: ann1_func.csv  ann1_seq.csv  cnn1_func.csv  my_submission.csv
prototypes/: ann.py  cnn.py
src/: cnn.py  keras_model1.py  run_ann.py  run_cnn.py
