[metadata]
name = mnist-handwritten-digit-recognizer
version = 2.0
description = A test package
long_description = file : Readme.md
author = Kaustav Ghosh
author_email = teetangh@gmail.com


[options]
packages = find:
python_requires = >= 3.6.9
install_requires =
    numpy
    pandas
    matplotlib
    pydot
    tensorflow
    keras
    scikit-learn


[options.packages.find]
exclude =
    tests*
    testing*
    examples*
    docs*
    build*

[options.entry_points]
console_scripts =
    mnist-ann-cli=src.run_ann.main:main
    mnist-cnn-cli=src.run_cnn.main:main
